# Elith

./: .dockerignore  AGENTS.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md  tracking.md
backend/: .dockerignore  .env.example  .gitignore  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  documents.py  feedback.py  health.py  tenant.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: __init__.py  _common.py  answer.py  chunk.py  citation.py  document.py  feedback.py  tenant.py  tenant_config.py  workspace.py
backend/app/providers/: __init__.py  base.py  gemini.py  mock.py
backend/app/rag/: __init__.py  pipeline.py  prompt.py  retrieve.py
backend/app/rag/steps/: __init__.py  cite.py  contradiction_check.py  ground_check.py  stale_warning.py
backend/app/repository/: __init__.py  answers.py  documents.py  feedback.py  tenant_config.py
backend/ingestion/: pipeline.py  splitter.py
backend/migrations/: env.py
backend/migrations/versions/: 71f42fc619d6_initial_boundary_schema_with_pgvector.py
backend/sample_data/: shinonome_config.json  shinonome_faq.txt
backend/scripts/: seed_shinonome.py
backend/tests/: conftest.py  test_chat_api.py  test_deps_tenant.py  test_documents_api.py  test_feedback_api.py  test_health.py  test_ingestion.py  test_models_scope.py  test_pipeline.py  test_prompt.py  test_providers.py  test_retrieve.py  test_sample_data.py  test_step_cite.py  test_step_contradiction_check.py  test_step_ground_check.py  test_step_stale_warning.py  test_tenant_api.py  test_tenant_scope.py
docs/: AGENTS.md  specification.md
docs/details/: directory.md  feature-list.md  infrastructure.md  multi-tenant-design.md  permission-design.md  process-flow.md  screen-flow.md  tech-stack.md
infra/: Dockerfile.api  Dockerfile.web
infra/db/: init.sql
web/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/documents/: page.tsx
web/app/review/: page.tsx
web/components/container/: ChatContainer.test.tsx  ChatContainer.tsx  DocumentsContainer.test.tsx  DocumentsContainer.tsx  ReviewContainer.test.tsx  ReviewContainer.tsx
web/components/presentational/: AnswerMessage.tsx  ChatComposer.tsx  CitationPanel.test.tsx  CitationPanel.tsx  FeedbackButtons.test.tsx  FeedbackButtons.tsx  ModeToggle.test.tsx  ModeToggle.tsx  StatusBadge.tsx  StatusWarning.test.tsx  WarningList.tsx
web/context/: TenantConfigContext.test.tsx  TenantConfigContext.tsx
web/hooks/: useChat.test.tsx  useChat.ts  useTenantConfig.test.tsx  useTenantConfig.ts
web/lib/api/: chat.test.ts  chat.ts  client.test.ts  client.ts  documents.test.ts  documents.ts  feedback.test.ts  feedback.ts  review.test.ts  review.ts  tenant.test.ts  tenant.ts
web/types/: api.ts  chat.ts  documents.ts  feedback.ts  review.ts  tenant-config.ts
