[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elith-backend"
version = "0.1.0"
description = "Elith RAG backend (config-driven multi-tenant RAG chat platform)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    # SQLAlchemy 2.0 style ORM (used by core/db.py in this issue)
    "sqlalchemy>=2",
    # alembic / pgvector are declared ahead of use as the foundation for #3
    # (DB migrations & vector column). Kept here so #3/#4/#5 need not edit pyproject.
    "alembic",
    "psycopg[binary]",
    "pgvector",
    # multipart is required by FastAPI for future file-upload endpoints (documents ingestion)
    "python-multipart",
    # Gemini free-tier LLM/Embedding SDK, used only behind the provider abstraction.
    # Pinned to <0.9: this SDK is deprecated (EOL); pinning avoids surprise breakage
    # until migration to the successor google-genai (tracked in a separate issue).
    "google-generativeai>=0.8,<0.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "pytest-asyncio",
]

# Auto-discover packages so subpackages (app.api/app.core) are included in a
# non-editable install (Docker/prod). A flat list omitted them -> ModuleNotFoundError.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ingestion*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic-generated revision files follow the tool's own template (long Column
# lines, typing.Union, etc.) and are regenerated, so we don't lint them.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

# FastAPI's `Depends(...)` (and friends) as a default argument is the
# framework's idiomatic dependency-injection pattern, not the mutable-default
# footgun B008 targets -- allowlist it instead of littering call sites with
# per-line noqa (first Depends() usage lands with #6, GET /tenant/config).
# (#7/#8 independently added a narrower app/api/*.py per-file-ignore for the
# same purpose; superseded by this allowlist when the branches merged -- it
# is strictly more precise since it doesn't blanket-disable B008 for
# non-FastAPI mutable-default bugs elsewhere in app/api/.)
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]
